--- a/NekoAPI/.env
+++ b/NekoAPI/.env
@@ -1,3 +1,4 @@
+# .env configs
 DISCORD_BOT_TOKEN="discord-bot-token-here"
 GOOGLE_API_KEY="google-api-key-here"
 GOOGLE_CSE_ID="google-custom-search-engine-id-here"
