--- a/NekoAPI/.env
+++ b/NekoAPI/.env
@@ -4,3 +4,4 @@ GOOGLE_API_KEY="google-api-key-here"
 GOOGLE_CSE_ID="google-custom-search-engine-id-here"
 GITHUB_TOKEN = "github-token-have-perm-create-gists-here"
 GOOGLE_GEMINI_API_KEY="google-gemini-api-key-here"
+CUSTOM_CHANNELS=<danh sách các ID kênh, phân tách bằng dấu phẩy, để chat bình thường>
