Example .env file📝

--- a/NekoAPI/.env
+++ b/NekoAPI/.env
@@ -1,7 +1,8 @@
 # .env configs
-DISCORD_BOT_TOKEN="discord-bot-token-here"
-GOOGLE_API_KEY="google-api-key-here"
-GOOGLE_CSE_ID="google-custom-search-engine-id-here"
-GITHUB_TOKEN = "github-token-have-perm-create-gists-here"
-GOOGLE_GEMINI_API_KEY="google-gemini-api-key-here"
-CUSTOM_CHANNELS=<danh sách các ID kênh, phân tách bằng dấu phẩy, để chat bình thường>
+DISCORD_BOT_TOKEN=<Your Discord bot token>
+GOOGLE_GEMINI_API_KEY=<Your Gemini API key>
+GOOGLE_API_KEY=<Your Google Custom Search API key>
+GOOGLE_CSE_ID=<Your Search Engine ID>
+GITHUB_TOKEN=<Your GitHub API key>
+CUSTOM_CHANNELS=<List of channel IDs, comma-separated, for normal chat>
+OWNER_DISCORD_ID=<Your Discord ID>
